L: template v2 con botones de wsp y telefono

--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -1,7 +1,6 @@
 ---
-import favIcon from '~/assets/favicons/favicon.ico';
-import favIconSvg from '~/assets/favicons/favicon.svg';
 import appleTouchIcon from '~/assets/favicons/apple-touch-icon.png';
+import { default as favIcon, default as favIconSvg } from '~/assets/favicons/favicon.svg';
 ---
 
 <link rel="shortcut icon" href={favIcon} />
